--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -21,6 +21,12 @@
             </p>
         </div>
 
+        {% if login_error %}
+        <div class="mb-6 p-4 bg-red-50 dark:bg-red-900/20 border border-red-200 dark:border-red-900/40 rounded-xl">
+            <p class="text-[10px] font-bold text-red-700 dark:text-red-300 uppercase tracking-wide">{{ login_error }}</p>
+        </div>
+        {% endif %}
+
         <form method="POST" class="space-y-8 uppercase font-sans">
             <div>
                 <label for="username"
@@ -30,7 +36,7 @@
                         class="material-symbols-outlined absolute left-4 top-1/2 -translate-y-1/2 text-gray-400 dark:text-gray-500 font-light text-[18px]">person</span>
                     <input type="text" id="username" name="username" required
                         class="w-full pl-12 pr-4 py-4 bg-gray-50/30 dark:bg-gray-900/50 border border-gray-200 dark:border-gray-700 rounded-xl text-xs text-gray-900 dark:text-white focus:ring-gray-400 dark:focus:ring-gray-500 focus:border-gray-400 dark:focus:border-gray-500 transition-all outline-none uppercase font-bold"
-                        placeholder="ADMIN_ROOT">
+                        placeholder="ADMIN_ROOT" value="{{ username_value or '' }}">
                 </div>
             </div>
 
